--- a/src/pages/author_page.css
+++ b/src/pages/author_page.css
@@ -10,4 +10,22 @@
     margin: 20px auto;
 }
 
-#mapid { height: 180px; }
+#mapid { 
+    display: none;
+    height: 180px; 
+    width: 300px;
+}
+
+.modal-window {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 100px; 
+}
+
+.modal-content div {
+    margin: 0 auto;
+}
