--- a/src/pages/author_page.css
+++ b/src/pages/author_page.css
@@ -1,19 +1,20 @@
+section {
+    font-family: 'Times New Roman', Times, serif;
+    margin-bottom: 40px;
+}
 
+.top {
+    text-align: center;
+}
 
 .gallery {
     max-width: 600px;
     max-height: 600px;
-    margin: 20px auto;
+    margin: 40px auto;
 }
 
 .video {
-    margin: 20px auto;
-}
-
-#mapid { 
-    display: none;
-    height: 180px; 
-    width: 300px;
+    margin: 50px auto;
 }
 
 .modal-window {
@@ -22,10 +23,32 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 10;
+    padding-top: 80px;
     background-color: rgba(0,0,0,0.4);
-    padding-top: 100px; 
 }
 
 .modal-content div {
+    margin: 0 auto;
+}
+
+.video-button {
+    width: 80%;
+    margin: 30px auto;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: rgb(255, 224, 180);
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s;
+}
+
+.video-button:hover {
+    background-color: rgb(255, 204, 128);
+}
+
+#mapid { 
+    height: 400px; 
+    z-index: 1;
     margin: 0 auto;
 }
