feat: add rss logo to footer

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -205,6 +205,11 @@ nav .submenu{
     height: auto;
 }
 
+.rss-logo{
+    height: 60px;
+    width: auto;   
+}
+
 footer{
     border-top: 2px solid white;
     height: 100px;
