--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,12 +4,12 @@
     }
 }
 
-/* @font-face {
+@font-face {
     font-family: 'AngryBirds';
     src: url('../data/ABfont.otf');
     font-weight: normal;
     font-style: normal;
-} */
+}
 
 body{
     margin: 0;
@@ -50,8 +50,9 @@ header .container{
 }
 
 .logo{
-    /* font-family: "AngryBirds", Arial; */
-    font-family: Arial;
+    margin-left: 5px;
+    font-family: "AngryBirds", Arial;
+    /* font-family: Arial; */
     font-size: 1.5rem;
     font-weight: normal;
     color: white;
@@ -104,7 +105,7 @@ nav .submenu{
 }
 
 nav .submenu li {
-    margin-right: 4px;
+    margin-right: 5px;
     cursor: pointer;
 }
 
@@ -135,7 +136,6 @@ nav .submenu li {
 
 .filmmaker-info{   
     width: 50%;
-    /* height: fit-content; */
     border-right: 2px dashed gray;
 }
 
