--- a/src/css/authorPage.css
+++ b/src/css/authorPage.css
@@ -1,3 +1,7 @@
+body {
+    /* overflow: scroll; */
+}
+
 section {
     font-family: 'Times New Roman', Times, serif;
     margin: 5px;
@@ -25,8 +29,8 @@ section {
 .list-movies ul li::before {
     content: ' ';
     position: absolute; 
-    height: 0.7em;
-    width: 0.7em;
+    height: 0.8em;
+    width: 0.8em;
     left: -1.3em;
     top: 0.2em;
     border: .2em solid #fff;
